integrated duration data stacked and grouped version into main tool

--- a/test_code.ipynb
+++ b/test_code.ipynb
@@ -8173,7 +8173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8198,7 +8198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8206,12 +8206,13 @@
     "#group data by month\n",
     "df['Yr_Mnth'] = pd.to_datetime(df.index).strftime('%Y-%m')\n",
     "dfm = df.groupby(['Yr_Mnth'],sort=False,)[df.columns].sum().reset_index()\n",
+    "df_month_data = df.groupby(['Yr_Mnth'],sort=False,)[df.columns].sum()\n",
     "df = dfm.drop('Yr_Mnth', axis='columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -8239,18 +8240,18 @@
          "offsetgroup": "0",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8298,18 +8299,18 @@
          "offsetgroup": "0",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8357,18 +8358,18 @@
          "offsetgroup": "0",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8416,18 +8417,18 @@
          "offsetgroup": "0",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           2,
@@ -8475,18 +8476,18 @@
          "offsetgroup": "0",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           3,
@@ -8534,18 +8535,18 @@
          "offsetgroup": "0",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8580,18 +8581,18 @@
          "offsetgroup": "1",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8639,18 +8640,18 @@
          "offsetgroup": "1",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8698,18 +8699,18 @@
          "offsetgroup": "1",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           1,
@@ -8757,18 +8758,18 @@
          "offsetgroup": "1",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           6,
@@ -8816,18 +8817,18 @@
          "offsetgroup": "1",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           17,
@@ -8875,18 +8876,18 @@
          "offsetgroup": "1",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8921,18 +8922,18 @@
          "offsetgroup": "2",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -8980,18 +8981,18 @@
          "offsetgroup": "2",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -9039,18 +9040,18 @@
          "offsetgroup": "2",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -9098,18 +9099,18 @@
          "offsetgroup": "2",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -9157,18 +9158,18 @@
          "offsetgroup": "2",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           2,
@@ -9216,18 +9217,18 @@
          "offsetgroup": "2",
          "type": "bar",
          "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11
+          "2019-07",
+          "2019-08",
+          "2019-09",
+          "2019-10",
+          "2019-11",
+          "2019-12",
+          "2020-01",
+          "2020-02",
+          "2020-03",
+          "2020-04",
+          "2020-05",
+          "2020-06"
          ],
          "y": [
           0,
@@ -10161,6 +10162,14 @@
     "        \"Duration: <5\": \"#900000\",\n",
     "        \"Duration: 0\": \"#6C0000\",\n",
     "    },\n",
+    "    #\"other\" : {\n",
+    "    #    \"Duration: 20+\" : \"#d900ff\",\n",
+    "    #    \"Duration: 16-20\": \"#bd02de\",\n",
+    "    #    \"Duration: 11-15\": \"#9a02b5\",\n",
+    "    #    \"Duration: 6-10\": \"#85039c\",\n",
+    "    #    \"Duration: <5\": \"#68017a\",\n",
+    "    #    \"Duration: 0\": \"#43014f\",\n",
+    "    #},\n",
     "}\n",
     "\n",
     "# Add the traces\n",
@@ -10170,9 +10179,9 @@
     "        if (df[t][col] == 0).all():\n",
     "            continue\n",
     "        # print(df[t][col])\n",
-    "        # print(df.index)\n",
+    "        # print(df.index.to_list())\n",
     "        fig.add_trace(go.Bar(\n",
-    "            x=df.index,\n",
+    "            x=df_month_data.index,\n",
     "            y=df[t][col],\n",
     "            base=base_offset,\n",
     "            # Set the right yaxis depending on the selected product (from enumerate)\n",
